Fix: Fixed the navbar overlapping with items

--- a/Front-end/Aigis/src/app/app-layout/app-layout.component.scss
+++ b/Front-end/Aigis/src/app/app-layout/app-layout.component.scss
@@ -1,3 +1,5 @@
+$navbar__height: 60px;
+
 .app-layout {
 
 }
@@ -10,6 +12,7 @@
   overflow: hidden;
   border-top-left-radius: 16px;
   border-bottom-left-radius: 16px;
+  padding-top: $navbar__height;
 }
 
 .app-layout__background {
@@ -23,7 +26,7 @@
 .app-layout__content {
   inset: 0px;
   position: relative;
-  padding: 0px 160px;
+  padding: 0px 0px;
 }
 
 @media only screen and (max-width: 720px) {
